# 2048

./: .gitignore  CMakeLists.txt  README.md  makefile  thing.c
